--- a/index.html
+++ b/index.html
@@ -468,7 +468,102 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscribe-container">
+          <p class="input-text">Subscribe</p>
+          <form class="footer-subscribe">
+            <input type="email" placeholder="E-mail" class="input-subscribe" />
+            <button type="submit" class="input-btn-subscribe">
+              Subscribe
+              <svg class="input-btn-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-plane"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
+    <div class="modal-overlay">
+      <div class="modal">
+        <button type="button" class="modal-close">
+          <svg class="modal-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-text">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <div class="modal-input-wrapper">
+            <label for="user-name" class="modal-input-label">Name</label>
+            <div class="modal-input-icon-wrapper">
+              <input
+                type="text"
+                class="modal-input"
+                name="user-name"
+                id="user-name"
+              />
+              <svg class="modal-input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-input-wrapper">
+            <label for="user-phone" class="modal-input-label">Phone</label>
+            <div class="modal-input-icon-wrapper">
+              <input
+                type="tel"
+                class="modal-input"
+                name="user-phone"
+                id="user-phone"
+              />
+              <svg class="modal-input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-input-wrapper">
+            <label for="user-email" class="modal-input-label">Email</label>
+            <div class="modal-input-icon-wrapper">
+              <input
+                type="email"
+                class="modal-input"
+                name="user-email"
+                id="user-email"
+              />
+              <svg class="modal-input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-comment-wrapper">
+            <label for="user-comment" class="modal-input-label">Comment</label>
+            <textarea
+              name="user-comment"
+              id="user-comment"
+              class="modal-text-area"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="modal-consent-wrapper">
+            <input
+              type="checkbox"
+              class="modal-consent-checkbox visually-hidden"
+              id="policy"
+              name="policy"
+              required
+              value="true"
+            />
+            <label for="policy" class="modal-consent-label"
+              ><span
+                ><svg class="modal-consent-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-okey"></use></svg></span
+              >I accept the terms and conditions of the
+              <a href="">Privacy Policy</a></label
+            >
+          </div>
+          <div class="modal-btn-wrapper">
+            <button type="submit" class="modal-submit-btn">Submit</button>
+          </div>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
