--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
         </div>
       </div>
     </footer>
-    <div class="modal-overlay">
+    <div class="modal-overlay is-open">
       <div class="modal">
         <button type="button" class="modal-close">
           <svg class="modal-close-icon" width="8" height="8">
@@ -538,7 +538,7 @@
               </svg>
             </div>
           </div>
-          <div class="modal-comment-wrapper">
+          <div class="modal-comment-wrapper modal-input-wrapper">
             <label for="user-comment" class="modal-input-label">Comment</label>
             <textarea
               name="user-comment"
